<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">RentReadyChecklist</string>
    <string name="appName">Employee Portal</string>
    <string name="rentReady">RentReady</string>
    <string name="toolbarName">NWHS Employee Portal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rent_ready">Rent Ready</string>
    <string name="rent_ready_pdf">Rent Ready PDF</string>
    <string name="rentReadyCheckList">Rent Ready Check List</string>
    <string name="new_checklist">New Checklist</string>
    <string name="saved_checklist">Saved Checklist</string>
    <string name="insurance">Insurance</string>
    <string name="other">Other</string>
    <string name="applogo">appLogo</string>
    <string name="solutions">Solutions</string>
    <string name="new_way_home">New Way Home</string>
    <string name="saved_checklist_name">Saved Checklist Name</string>
    <string name="saved_check_list">Saved Check List</string>
    <string name="back_arrow">back arrow</string>
    <string name="next">Next</string>
    <string name="date">Date:</string>
    <string name="time">Time</string>
    <string name="time_new">Time :</string>
    <string name="property_address">Property Address</string>
    <string name="front_door_lock_set_n_deadbolt_handle_full_set">Front Door Lock Set:\n(3 Photos: Deadbolt, Handle, Full Set)</string>
    <string name="lock_set_from_garage_to_house_door_n_3_photos_deadbolt_handle_full_set">Lock Set From Garage To House Door\n(3 Photos: Deadbolt, Handle, Full Set)</string>
    <string name="frontDoorLockSetDeadboltHandleFullSet">Front Door Lock Set (3 Photos: Deadbolt, Handle, Full Set)</string>
    <string name="lockSetFromGarageToHouseDoor">Lock Set From Garage To House Door(3 Photos: Deadbolt, Handle, Full Set)</string>
    <string name="emailAttachment">Please find the attached PDF for Rent Ready CheckList.</string>
    <string name="address">Address</string>
    <string name="sendingEmail">Sending email...</string>
    <string name="hello">Hello, \n</string>
    <string name="submit">Submit</string>
    <string name="email_address">Email Address</string>
    <string name="take_pictures">Take Pictures</string>
    <string name="fence">Fence :</string>
    <string name="fix">FIX</string>
    <string name="na">NA</string>
    <string name="ok">OK</string>
    <string name="product">Product :</string>
    <string name="productName">Product</string>
    <string name="notes">Notes :</string>
    <string name="max_150_characters">Max 150 Characters</string>
    <string name="story">Story</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="previous">Previous</string>
    <string name="upload_your_files_here">Upload Your Files Here</string>
    <string name="outside">Outside</string>
    <string name="bedroom">Bedroom</string>
    <string name="number_of_bedrooms">Number of Bedrooms:</string>
    <string name="bathroom">Bathroom</string>
    <string name="number_of_bathrooms">Number of Bathrooms</string>
    <string name="front_doors">Front Doors</string>
    <string name="garage">Garage</string>
    <string name="laundry_room">Laundry Room</string>
    <string name="living_room">Living Room</string>
    <string name="great_room">Great Room</string>
    <string name="kitchen">Kitchen</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="save">Save</string>
    <string name="dining_room">Dining Room</string>
    <string name="bedroom_list">Bedroom List</string>
    <string name="bathroom_list">Bathroom List</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="timeHint">e.g: 2.2</string>
    <string name="please_enter_address">Please enter property address</string>
    <string name="adapterChecklist">Checklist </string>
    <string name="saved">saved</string>
    <string name="oldReplace">:</string>
    <string name="newList">new</string>
    <string name="rentReadyFolder">/RentReady</string>
    <string name="emailIntentTypeDir">vnd.android.cursor.dir/email</string>
    <string name="emailIntentTypePdf">application/pdf</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="clean">Clean</string>
    <string name="replace">Replace</string>
    <string name="color">Color :</string>
    <string name="style">Style :</string>
    <string name="wand">Wand :</string>
    <string name="delete">Delete</string>
    <string name="please_enter_time_in_format">Please enter time in HH.mm format</string>
    <string name="Please_Wait">Please Wait...</string>
    <string name="if_replace_size">If Replace, Size</string>
    <string name="enterEmailAddress">Please enter email address</string>
    <string name="invalidEmail">Not a valid email address</string>
    <string name="noInternet">No Internet</string>
    <string name="please_wait_we_are_generating_pdf">Please Wait We Are Generating PDF</string>
    <string name="upload_images">Upload Images</string>
    <string name="delete_checklist">Delete Checklist</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">NO</string>
    <string name="you_can_view_this_checklist_later_in_the_saved_checklist_section_do_you_want_to_exit_the_checklist">You can view this checklist later in the Saved Checklist section.Do you want to exit the checklist?</string>
    <string name="yesexit">Yes</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="take_photo">Take Photo</string>
    <string name="itemDishwasher">Dishwasher :</string>
    <string name="private_Folder">Private</string>
    <string name="rentReadyPdf">RentReady.pdf</string>
    <string name="Already_file_exists_by_name">Already file exists by name, please delete and download again</string>
    <string name="pdfHasBeenDownloaded">Pdf has been downloaded.</string>
    <string name="pdfAppliances">Appliances(Check For Filters, Knobs, Racks, Shelves, Drip Pans, Light Bulbs) \n Take Condition Photos And Modal Number For All Appliances"</string>
    <string name="storagePermission">For PDF generation allow NWHS Employee Portal access to storage. Tap Settings > Permissions and turn Files and media on.</string>
    <string name="cameraPermission">For uploading photos allow NWHS Employee Portal access to media and camera. Tap Settings > Permissions and turn Camera on.</string>
    <string name="permissionRequired">Permission Required</string>
    <string name="com_rentreadychecklist">com.rentreadychecklist</string>
    <string name="com_rentreadychecklist_provider">com.rentreadychecklist.provider</string>
    <string name="packageName">package:</string>
    <string name="newPicture">New Picture</string>
    <string name="fromYourCamera">From your Camera</string>
    <string name="imageType">image/*</string>
    <string name="addressLockSet">Address and Front Door LockSet and LockSet From Garage to House Door</string>
    <string name="ddMMMyy">dd/MMM/yyyy</string>
    <string name="hourMinuteFormat">h:mm a</string>
    <string name="itemOK" tools:ignore="ButtonCase,Typos">ok</string>
    <string name="itemNA">na</string>
    <string name="itemFIX">fix</string>
    <string name="itemCarpet">Carpet :</string>
    <string name="itemBlinds">Blinds :</string>
    <string name="itemSatelliteDish">Satellite Dish and Cables :</string>
    <string name="itemPaint">Paint :</string>
    <string name="itemEvidenceOfWaterDamage">Evidence Of Water Damage :</string>
    <string name="itemACFiltersCoverCapsScrews">A/C Filters Cover, Caps, Screws :</string>
    <string name="itemFoamAroundCompressor">Foam Around Compressor :</string>
    <string name="itemRefrigerator">Refrigerator :</string>
    <string name="formBathroom">Bathroom</string>
    <string name="formBedroom">Bedroom</string>
    <string name="dimensions">Dimensions</string>
    <string name="dimensions_blinds">Dimensions :</string>
    <string name="no_saved_checklist">No Saved Checklist</string>
    <string name="saved_checklist_saved">Saved Checklist</string>
    <string name="send_pdf">Send Pdf</string>
    <string name="download_pdf">Download Pdf</string>
    <string name="download">Download</string>
    <string name="bathroom_1">Bathroom 1</string>
    <string name="bathroom_2">Bathroom 2</string>
    <string name="bathroom_3">Bathroom 3</string>
    <string name="bathroom_4">Bathroom 4</string>
    <string name="bathroom_5">Bathroom 5</string>
    <string name="bathroom_6">Bathroom 6</string>
    <string name="bedroom_1">Bedroom 1</string>
    <string name="bedroom_2">Bedroom 2</string>
    <string name="bedroom_3">Bedroom 3</string>
    <string name="bedroom_4">Bedroom 4</string>
    <string name="bedroom_5">Bedroom 5</string>
    <string name="bedroom_6">Bedroom 6</string>
    <string name="do_you_want_to_send_an_email_or_keep_editing">Do you want to send an Email or Keep Editing?</string>
    <string name="send_email">Send Email</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="bathroom_ok">BathroomOk</string>
    <string name="outside_ok">OutsideOk</string>
    <string name="living_room_ok">LivingRoomOk</string>
    <string name="bedroom_ok">BedroomOk</string>
    <string name="garage_ok">GarageOk</string>
    <string name="miscellaneous_ok">MiscellaneousOk</string>
    <string name="laundry_room_ok">LaundryRoomOk</string>
    <string name="kitchen_ok">KitchenOk</string>
    <string name="great_room_ok">GreatRoomOk</string>
    <string name="front_door_ok">FrontDoorOk</string>
    <string name="dining_room_ok">DiningRoomOk</string>
    <string name="title">Title</string>
    <string name="vehicle_insurance">Vehicle Insurance</string>
    <string name="incident_report">Incident Report</string>
    <string name="nwhs_documents">NWHS Documents</string>
    <string name="formDiningRoom">DiningRoom</string>
    <string name="formFrontDoor">FrontDoor</string>
    <string name="formGarage">Garage</string>
    <string name="formGreatRoom">GreatRoom</string>
    <string name="formKitchen">Kitchen</string>
    <string name="formLaundry">Laundry</string>
    <string name="formLivingRoom">LivingRoom</string>
    <string name="formMiscellaneous">Miscellaneous</string>
    <string name="formOutside">Outside</string>
    <string name="itemCleaning">Cleaning</string>
    <string name="itemSmokeDetectors">Smoke Detectors (One In Each Bedroom, Hall, And Living Room)</string>
    <string name="itemHAVC">HAVC</string>
    <string name="itemStairsHallway">Stairs/ Hallway</string>
    <string name="itemCarpetAndFlooring">Carpet And Flooring</string>
    <string name="itemWallsBaseboardsCeiling">Walls/ Baseboards/ Ceiling</string>
    <string name="itemWindows">Windows</string>
    <string name="itemElectrical">Electrical</string>
    <string name="itemClosets">Closets</string>
    <string name="itemFireplace">Fireplace</string>
    <string name="itemSink">Sink</string>
    <string name="itemAppliances">Appliances (Check For Filters, Knobs, Racks, Shelves, Drip Pans, Light Bulbs) Take Condition Photos And Modal Number For All Appliances</string>
    <string name="itemPantry">Pantry</string>
    <string name="itemWindowsExteriorDoors">Windows/ Exterior Doors</string>
    <string name="enter_bedroom_name">Enter bedroom name</string>
    <string name="edit">Edit</string>
</resources>