<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="@color/background_color"
    android:orientation="vertical"
    android:paddingHorizontal="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/formItemText"
            style="@style/new_checklist_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fence" />

        <RadioGroup
            android:id="@+id/okNaFixRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/ok"
                android:layout_width="35dp"
                android:layout_height="25dp"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/ok_background_selector"
                android:button="@android:color/transparent"
                android:text="@string/ok"
                android:textAlignment="center"
                android:textColor="@drawable/ok_radio_button_text_color"
                android:textSize="11sp" />

            <RadioButton
                android:id="@+id/na"
                android:layout_width="35dp"
                android:layout_height="25dp"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/na_background_selector"
                android:button="@android:color/transparent"
                android:text="@string/na"
                android:textAlignment="center"
                android:textColor="@drawable/na_radio_button_text_color"
                android:textSize="11sp" />

            <RadioButton
                android:id="@+id/fix"
                android:layout_width="35dp"
                android:layout_height="25dp"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/fix_background_selector"
                android:button="@android:color/transparent"
                android:text="@string/fix"
                android:textAlignment="center"
                android:textColor="@drawable/fix_radio_button_text_color"
                android:textSize="11sp" />

        </RadioGroup>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/needFixLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/new_checklist_style"
                android:layout_width="41dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time_new" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/timeTextInputLayout"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                android:layout_width="206dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/box_stroke_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/timeInHourMinute"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:inputType="time"
                    android:maxEms="5"
                    android:maxLength="5"
                    android:maxLines="1"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/new_checklist_style"
                android:layout_width="41dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/product" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                android:layout_width="206dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/box_stroke_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <TextView
            style="@style/new_checklist_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/notes" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/box_stroke_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:maxLength="150"
                android:maxLines="5"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto"
            android:text="@string/max_150_characters"
            android:textColor="#ACACAC"
            android:textSize="12sp" />


        <LinearLayout
            android:id="@+id/uploadImageLayout"
            android:layout_width="match_parent"
            android:layout_height="142dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/add_image_shape"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_upload_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/upload_your_files_here" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveFix"
            android:layout_width="94dp"
            android:layout_height="31dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/next_button_shape"
            android:backgroundTint="@color/nwhs"
            android:fontFamily="@font/roboto"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/dishCableStoryLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/dish_cables_story_shape"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            style="@style/story_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="10dp"
            android:text="@string/story" />

        <CheckBox
            style="@style/new_checklist_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1" />

        <CheckBox
            style="@style/new_checklist_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2" />

    </LinearLayout>

</LinearLayout>