<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.EmailFragment">

    <LinearLayout
        android:id="@+id/customToolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/nwhs"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:paddingTop="12dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/backPress"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/back_arrow"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/appName" />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/toolbarName"
           android:textColor="@color/white"
           android:layout_marginStart="16dp"
           android:textSize="18sp">

       </TextView>
    </LinearLayout>


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/customToolbar">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        android:clickable="true"
        android:paddingHorizontal="16dp"
        android:focusable="true">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:background="@drawable/email_submit"
            android:contentDescription="@string/app_name" />

        <TextView
            style="@style/new_checklist_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/email_address" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:backgroundTint="@color/white"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/box_stroke_color">

            <AutoCompleteTextView
                android:id="@+id/emailTextview"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:backgroundTint="@color/white"
                android:inputType="textEmailAddress"
                android:maxLength="70"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/nwhs"
            android:fontFamily="@font/roboto"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:cardCornerRadius="10dp">

            <TextView
                style="@style/app_text_style"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_gravity="center"
                android:text="@string/submit"
                android:textAllCaps="true"
                android:textSize="18sp" />

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>