<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".fragments.BedroomFormFragment">

    <EditText
        android:id="@+id/bedroomNameEditText"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_bedroom_name"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:visibility="gone"
        android:maxLength="20"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </EditText>

    <TextView
        android:id="@+id/formTitle"
        style="@style/form_title_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/bedroom_1"
        android:maxLength="20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/editButton"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/next_button_shape"
        android:backgroundTint="@color/nwhs"
        android:fontFamily="@font/roboto"
        android:text="@string/edit"
        android:visibility="visible"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveButton"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:background="@drawable/next_button_shape"
        android:backgroundTint="@color/nwhs"
        android:fontFamily="@font/roboto"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>





    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp"
        tools:listitem="@layout/bedroom_row" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next"
        android:layout_width="94dp"
        android:layout_height="41dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/next_button_shape"
        android:backgroundTint="@color/nwhs"
        android:fontFamily="@font/roboto"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/previous"
        android:layout_width="94dp"
        android:layout_height="41dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/previous_button_shape"
        android:fontFamily="@font/roboto"
        android:text="@string/previous"
        android:textAllCaps="false"
        android:textColor="@color/nwhs"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/next" />

</androidx.constraintlayout.widget.ConstraintLayout>